--- a/TabelaFut/TabelaFut.csproj
+++ b/TabelaFut/TabelaFut.csproj
@@ -67,11 +67,23 @@
     <Compile Include="Forms\CustomMsgBox.Designer.cs">
       <DependentUpon>CustomMsgBox.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\frmEditArbitro.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmEditArbitro.Designer.cs">
+      <DependentUpon>frmEditArbitro.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\frmEditTime.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\frmEditTime.Designer.cs">
       <DependentUpon>frmEditTime.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\frmGerenciarArbitros.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmGerenciarArbitros.Designer.cs">
+      <DependentUpon>frmGerenciarArbitros.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\frmGerenciarTimes.cs">
       <SubType>Form</SubType>
@@ -91,8 +103,14 @@
     <EmbeddedResource Include="Forms\CustomMsgBox.resx">
       <DependentUpon>CustomMsgBox.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmEditArbitro.resx">
+      <DependentUpon>frmEditArbitro.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmEditTime.resx">
       <DependentUpon>frmEditTime.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmGerenciarArbitros.resx">
+      <DependentUpon>frmGerenciarArbitros.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmGerenciarTimes.resx">
       <DependentUpon>frmGerenciarTimes.cs</DependentUpon>
