--- a/TabelaFut/TabelaFut.csproj
+++ b/TabelaFut/TabelaFut.csproj
@@ -77,6 +77,12 @@
     <Compile Include="Forms\frmEditArbitro.Designer.cs">
       <DependentUpon>frmEditArbitro.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\frmEditEstadio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmEditEstadio.Designer.cs">
+      <DependentUpon>frmEditEstadio.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\frmEditJogador.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -94,6 +100,12 @@
     </Compile>
     <Compile Include="Forms\frmGerenciarArbitros.Designer.cs">
       <DependentUpon>frmGerenciarArbitros.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\frmGerenciarEstadios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmGerenciarEstadios.Designer.cs">
+      <DependentUpon>frmGerenciarEstadios.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\frmGerenciarJogadores.cs">
       <SubType>Form</SubType>
@@ -122,6 +134,9 @@
     <EmbeddedResource Include="Forms\frmEditArbitro.resx">
       <DependentUpon>frmEditArbitro.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmEditEstadio.resx">
+      <DependentUpon>frmEditEstadio.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmEditJogador.resx">
       <DependentUpon>frmEditJogador.cs</DependentUpon>
     </EmbeddedResource>
@@ -130,6 +145,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmGerenciarArbitros.resx">
       <DependentUpon>frmGerenciarArbitros.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmGerenciarEstadios.resx">
+      <DependentUpon>frmGerenciarEstadios.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmGerenciarJogadores.resx">
       <DependentUpon>frmGerenciarJogadores.cs</DependentUpon>
@@ -189,6 +207,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AppIcon.ico" />
+    <None Include="Resources\estadio100px.png" />
+    <None Include="Resources\estadio100px1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
